# youtube-analysis

./: .gitignore  pyproject.toml
src/: youtube_analysis.py
