[tool.poetry]
name = "youtube-analysis"
version = "0.1.0"
description = ""
authors = ["kota ishizuka <kota.ishizuka1210@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.8.2"
pandas = "^1.0.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
